--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,8 @@
 user  nginx;
 worker_processes  auto;
 
+load_module modules/ngx_http_app_protect_module.so;
+
 error_log  /var/log/nginx/error.log notice;
 pid        /var/run/nginx.pid;
 
@@ -13,6 +15,8 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
+
+    app_protect_enable on;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
@@ -28,10 +32,4 @@ http {
     #gzip  on;
 
     include /etc/nginx/conf.d/*.conf;
-
-    server {
-        location / {
-            app_protect_enable on;
-        }
-    }
 }
