App protect policies now supported

--- a/files/nginx/nginx.conf
+++ b/files/nginx/nginx.conf
@@ -16,8 +16,6 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    app_protect_enable on;
-
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
@@ -32,4 +30,12 @@ http {
     #gzip  on;
 
     include /etc/nginx/conf.d/*.conf;
+
+    server {
+        app_protect_enable on;
+        app_protect_policy_file "/etc/nginx/policy_waf.json";
+        app_protect_security_log_enable on;
+        app_protect_security_log "/etc/nginx/pp-protect-log-policy.json"
+        }
+    }
 }
