--- a/input.tfvars.example
+++ b/input.tfvars.example
@@ -4,4 +4,4 @@ base_ami                  = "ami-0aab712d6363da7f9" # ap-southeast-2 AWS Linux 2
 nginx_plus_repo_cert_path = "/home/user/nginx-repo.crt"
 nginx_plus_repo_key_path  = "/home/user/nginx-repo.key"
 nginx_conf_repo_url       = "https://github.com/leonseng/nginx-app-protect-demo.git"
-nginx_conf_relative_path  = "files/nginx.conf"
+nginx_conf_relative_path  = "files/nginx"
