Fixed nginx.conf loading bug

--- a/files/nginx/nginx.conf
+++ b/files/nginx/nginx.conf
@@ -33,9 +33,8 @@ http {
 
     server {
         app_protect_enable on;
-        app_protect_policy_file "/etc/nginx/policy_waf.json";
+        app_protect_policy_file /etc/nginx/policy_waf.json;
         app_protect_security_log_enable on;
-        app_protect_security_log "/etc/nginx/pp-protect-log-policy.json"
-        }
+        app_protect_security_log /etc/app_protect/conf/log_default.json /tmp/nginx-security.log;
     }
 }
