--- a/files/nginx/demo/nginx.conf
+++ b/files/nginx/demo/nginx.conf
@@ -35,6 +35,6 @@ http {
         app_protect_enable on;
         app_protect_policy_file /etc/nginx/policy_waf.json;
         app_protect_security_log_enable on;
-        app_protect_security_log /etc/app_protect/conf/log_default.json /tmp/nginx-security.log;
+        app_protect_security_log /etc/app_protect/conf/log_default.json /var/log/nginx/app_protect/nginx-security.log;
     }
 }
