--- a/files/nginx/l7dos/nginx.conf
+++ b/files/nginx/l7dos/nginx.conf
@@ -1,6 +1,14 @@
 user nginx;
+worker_processes  auto;
 
 load_module modules/ngx_http_app_protect_dos_module.so;
+
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
+
+events {
+    worker_connections  1024;
+}
 
 http {
     server {
