--- a/files/nginx/demo/nginx.conf
+++ b/files/nginx/demo/nginx.conf
@@ -1,31 +1,20 @@
-user  nginx;
-worker_processes  auto;
+user nginx;
+worker_processes auto;
 
 load_module modules/ngx_http_app_protect_module.so;
 
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
+error_log /var/log/nginx/error.log notice;
+pid       /var/run/nginx.pid;
 
-events {
-    worker_connections  1024;
-}
+events {}
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    include /etc/nginx/mime.types;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log  /var/log/nginx/access.log  main;
-
-    sendfile        on;
-    #tcp_nopush     on;
-
-    keepalive_timeout  65;
-
-    #gzip  on;
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log /var/log/nginx/access.log main;
 
     include /etc/nginx/conf.d/*.conf;
 
