--- a/files/nginx/l7dos/nginx.conf
+++ b/files/nginx/l7dos/nginx.conf
@@ -1,16 +1,22 @@
 user nginx;
-worker_processes  auto;
+worker_processes auto;
 
 load_module modules/ngx_http_app_protect_dos_module.so;
 
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
+error_log /var/log/nginx/error.log notice;
 
-events {
-    worker_connections  1024;
-}
+events {}
 
 http {
+    include /etc/nginx/mime.types;
+
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log /var/log/nginx/access.log  main;
+
+    include /etc/nginx/conf.d/*.conf;
+
     server {
         app_protect_dos_enable on;
         app_protect_dos_name "server_name";
